--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,16 @@
-Flask==2.0.1
-yt-dlp==2021.12.1
-gunicorn==20.1.0
-Werkzeug==2.0.3
+click==8.1.8
+dnspython==2.7.0
+email-validator==2.2.0
+flask==3.1.0
+flask-sqlalchemy==3.1.1
+greenlet==3.1.1
+gunicorn==23.0.0
+idna==3.10
+itsdangerous==2.2.0
+jinja2==3.1.5
+markupsafe==3.0.2
+packaging==24.2
+psycopg2-binary==2.9.10
+sqlalchemy==2.0.38
+typing-extensions==4.12.2
+werkzeug==3.1.3
